# T5Gemma-TTS

./: .gitignore  README.md  README_ja.md  inference_commandline_hf.py  inference_gradio.py  inference_tts_utils.py  pyproject.toml  requirements.txt
data/xcodec2/: configuration_bigcodec.py  modeling_xcodec2.py
data/xcodec2/vq/: blocks.py  factorized_vector_quantize.py  module.py
examples/amitaro/: README.md  prepare_amitaro_dataset.py  t5gemma_2b-2b-ft-lora-amitaro.sh
hf_export/: modeling_t5gemma_voice.py
scripts/: quantize_model.py
t5gemma_tts/: duration_estimator.py  inference_tts_utils.py
t5gemma_tts/data/: tokenizer.py
t5gemma_tts/data/xcodec2/vq/: activations.py  bs_roformer5.py  codec_decoder_vocos.py  codec_encoder.py  residual_vq.py
